// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BlankLines.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
pragma solidity >=0.4.0 <0.7.0;


contract A {
}
contract B {
}

contract C {
}

contract A {
    function spam() public pure {
        // ...
    }
    function ham() public pure {
        // ...
    }
}

=====================================output=====================================
pragma solidity >=0.4.0 <0.7.0;

contract A {}
contract B {}

contract C {}

contract A {
    function spam() public pure {
        // ...
    }
    function ham() public pure {
        // ...
    }
}

================================================================================
`;

exports[`BlankLines.sol locations 1`] = `
SourceUnit 0-205
  SourceUnitMembers 0-205
    PragmaDirective 0-31
      VersionPragma 7-30
        VersionExpressionSets 15-30
          VersionExpressionSet 15-30
            VersionTerm 16-23
              VersionOperator 16-18
              SimpleVersionLiteral 18-23
            VersionTerm 24-30
              VersionOperator 24-25
              SimpleVersionLiteral 25-30
    ContractDefinition 34-48
      Identifier 43-44
      ContractSpecifiers 44-44
      ContractMembers 47-47
    ContractDefinition 49-63
      Identifier 58-59
      ContractSpecifiers 59-59
      ContractMembers 62-62
    ContractDefinition 65-79
      Identifier 74-75
      ContractSpecifiers 75-75
      ContractMembers 78-78
    ContractDefinition 81-204
      Identifier 90-91
      ContractSpecifiers 91-91
      ContractMembers 94-203
        FunctionDefinition 98-148
          Identifier 107-111
          ParametersDeclaration 111-113
            Parameters 112-112
          FunctionAttributes 113-125
            PublicKeyword 114-120
            PureKeyword 121-125
          Block 126-148
            Statements 128-128
        FunctionDefinition 153-202
          Identifier 162-165
          ParametersDeclaration 165-167
            Parameters 166-166
          FunctionAttributes 167-179
            PublicKeyword 168-174
            PureKeyword 175-179
          Block 180-202
            Statements 182-182
`;

exports[`ControlStructures.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
pragma solidity >=0.4.0 <0.6.0;


contract ControlStructures
{
    struct Bank
    {
        address owner;
        uint balance;
    }

    function () {
        if (true)
        {
            doSomething();
        }

        while(true){
            break;
        }

        for (uint a; a < 10; a++) {
            doSomethingElse();}

        /* TODO: singleline trueBody should be printed and indented in a new
                 line
        if (x < 10)
            x += 1;
        */

        /* TODO: force braquets if statement is too complex
        if (x < 10)
            someArray.push(Coin({
                name: 'spam',
                value: 42
            }));
        */

        if (x < 3) {
            x += 1;
        } else
        if (x > 7) {
            x -= 1;
        }
        else {
            x = 5;
        }

        /* TODO: singleline trueBody and falseBody should be printed and
                 indented in a new line
        if (x < 3)
            x += 1;
        else
            x -= 1;
        */
    }
}

=====================================output=====================================
pragma solidity >=0.4.0 <0.6.0;

contract ControlStructures {
    struct Bank {
        address owner;
        uint balance;
    }

    function() {
        if (true) {
            doSomething();
        }

        while (true) {
            break;
        }

        for (uint a; a < 10; a++) {
            doSomethingElse();
        }

        /* TODO: singleline trueBody should be printed and indented in a new
                 line
        if (x < 10)
            x += 1;
        */

        /* TODO: force braquets if statement is too complex
        if (x < 10)
            someArray.push(Coin({
                name: 'spam',
                value: 42
            }));
        */

        if (x < 3) {
            x += 1;
        } else if (x > 7) {
            x -= 1;
        } else {
            x = 5;
        }

        /* TODO: singleline trueBody and falseBody should be printed and
                 indented in a new line
        if (x < 3)
            x += 1;
        else
            x -= 1;
        */
    }
}

================================================================================
`;

exports[`ControlStructures.sol locations 1`] = `
SourceUnit 0-1047
  SourceUnitMembers 0-1047
    PragmaDirective 0-31
      VersionPragma 7-30
        VersionExpressionSets 15-30
          VersionExpressionSet 15-30
            VersionTerm 16-23
              VersionOperator 16-18
              SimpleVersionLiteral 18-23
            VersionTerm 24-30
              VersionOperator 24-25
              SimpleVersionLiteral 25-30
    ContractDefinition 34-1046
      Identifier 43-60
      ContractSpecifiers 61-61
      ContractMembers 63-1045
        StructDefinition 67-135
          Identifier 74-78
          StructMembers 85-130
            StructMember 93-107
              AddressType 93-100
              Identifier 101-106
            StructMember 116-129
              UintKeyword 116-120
              Identifier 121-128
        UnnamedFunctionDefinition 141-1044
          ParametersDeclaration 150-152
            Parameters 151-151
          UnnamedFunctionAttributes 152-152
          Block 153-1044
            Statements 155-842
              IfStatement 163-219
                TrueKeyword 167-171
                Block 181-219
                  Statements 183-210
                    ExpressionStatement 195-209
                      FunctionCallExpression 195-208
                        Identifier 195-206
                        PositionalArgumentsDeclaration 206-208
                          PositionalArguments 207-207
              WhileStatement 229-270
                TrueKeyword 235-239
                Block 240-270
                  Statements 242-261
                    BreakStatement 254-260
              ForStatement 280-339
                VariableDeclarationStatement 285-292
                  UintKeyword 285-289
                  Identifier 290-291
                ExpressionStatement 293-300
                  InequalityExpression 293-299
                    Identifier 293-294
                    DecimalNumberExpression 297-299
                PostfixExpression 301-304
                  Identifier 301-302
                Block 306-339
                  Statements 308-338
                    ExpressionStatement 320-338
                      FunctionCallExpression 320-337
                        Identifier 320-335
                        PositionalArgumentsDeclaration 335-337
                          PositionalArguments 336-336
              IfStatement 699-841
                InequalityExpression 703-708
                  Identifier 703-704
                  DecimalNumberExpression 707-708
                Block 710-741
                  Statements 712-732
                    ExpressionStatement 724-731
                      AssignmentExpression 724-730
                        Identifier 724-725
                        DecimalNumberExpression 729-730
                ElseBranch 742-841
                  IfStatement 755-841
                    InequalityExpression 759-764
                      Identifier 759-760
                      DecimalNumberExpression 763-764
                    Block 766-797
                      Statements 768-788
                        ExpressionStatement 780-787
                          AssignmentExpression 780-786
                            Identifier 780-781
                            DecimalNumberExpression 785-786
                    ElseBranch 806-841
                      Block 811-841
                        Statements 813-832
                          ExpressionStatement 825-831
                            AssignmentExpression 825-830
                              Identifier 825-826
                              DecimalNumberExpression 829-830
`;

exports[`FunctionDeclaration.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
pragma solidity >=0.4.0 <0.7.0;


contract FunctionDeclaration {
    function increment(uint x) public pure returns (uint)
    {
        return x + 1;
    }

    function increment(uint x) public pure returns (uint){
        return x + 1;
    }

    function increment(uint x) public pure returns (uint) {
        return x + 1;
        }

    function increment(uint x) public pure returns (uint) {
        return x + 1;}

    function kill() onlyowner public {
        selfdestruct(owner);
    }

    /* TODO: modifiers should always split if arguments split */
    function thisFunctionHasLotsOfArguments(address a, address b, address c,
        address d, address e, address f) public {
        doSomething();
    }

    function thisFunctionHasLotsOfArguments(address a,
                                            address b,
                                            address c,
                                            address d,
                                            address e,
                                            address f) public {
        doSomething();
    }

    function thisFunctionHasLotsOfArguments(
        address a,
        address b,
        address c,
        address d,
        address e,
        address f) public {
        doSomething();
    }

    function thisFunctionNameIsReallyLong(address x, address y, address z)
                                          public
                                          onlyowner
                                          priced
                                          returns (address) {
        doSomething();
    }

    function thisFunctionNameIsReallyLong(address x, address y, address z)
        public onlyowner priced returns (address)
    {
        doSomething();
    }

    function thisFunctionNameIsReallyLong(address x, address y, address z)
        public
        onlyowner
        priced
        returns (address) {
        doSomething();
    }

    function thisFunctionNameIsReallyLong(
        address a,
        address b,
        address c
    )
        public
        returns (address someAddressName,
                 uint256 LongArgument,
                 uint256 Argument)
    {
        doSomething();

        return (veryVeryLongReturnArg1,
                veryVeryLongReturnArg1,
                veryVeryLongReturnArg1);
    }
}


// Base contracts just to make this compile
contract B {
    constructor(uint) public {
    }
}


contract C {
    constructor(uint, uint) public {
    }
}


contract D {
    constructor(uint) public {
    }
}


/* TODO: constructors calls have priority over visibility */
contract A is B, C, D {
    uint x;

    constructor(uint param1, uint param2, uint param3, uint param4, uint param5)
    B(param1)
    C(param2, param3)
    D(param4)
    public
    {
        x = param5;
    }
}


contract X is B, C, D {
    uint x;

    constructor(uint param1, uint param2, uint param3, uint param4, uint param5)
        public
        B(param1)
        C(param2, param3)
        D(param4) {
        x = param5;
    }
}

=====================================output=====================================
pragma solidity >=0.4.0 <0.7.0;

contract FunctionDeclaration {
    function increment(uint x) public pure returns (uint) {
        return x + 1;
    }

    function increment(uint x) public pure returns (uint) {
        return x + 1;
    }

    function increment(uint x) public pure returns (uint) {
        return x + 1;
    }

    function increment(uint x) public pure returns (uint) {
        return x + 1;
    }

    function kill() public onlyowner {
        selfdestruct(owner);
    }

    /* TODO: modifiers should always split if arguments split */
    function thisFunctionHasLotsOfArguments(
        address a,
        address b,
        address c,
        address d,
        address e,
        address f
    ) public {
        doSomething();
    }

    function thisFunctionHasLotsOfArguments(
        address a,
        address b,
        address c,
        address d,
        address e,
        address f
    ) public {
        doSomething();
    }

    function thisFunctionHasLotsOfArguments(
        address a,
        address b,
        address c,
        address d,
        address e,
        address f
    ) public {
        doSomething();
    }

    function thisFunctionNameIsReallyLong(
        address x,
        address y,
        address z
    ) public onlyowner priced returns (address) {
        doSomething();
    }

    function thisFunctionNameIsReallyLong(
        address x,
        address y,
        address z
    ) public onlyowner priced returns (address) {
        doSomething();
    }

    function thisFunctionNameIsReallyLong(
        address x,
        address y,
        address z
    ) public onlyowner priced returns (address) {
        doSomething();
    }

    function thisFunctionNameIsReallyLong(
        address a,
        address b,
        address c
    )
        public
        returns (
            address someAddressName,
            uint256 LongArgument,
            uint256 Argument
        )
    {
        doSomething();

        return (
            veryVeryLongReturnArg1,
            veryVeryLongReturnArg1,
            veryVeryLongReturnArg1
        );
    }
}

// Base contracts just to make this compile
contract B {
    constructor(uint) public {}
}

contract C {
    constructor(uint, uint) public {}
}

contract D {
    constructor(uint) public {}
}

/* TODO: constructors calls have priority over visibility */
contract A is B, C, D {
    uint x;

    constructor(
        uint param1,
        uint param2,
        uint param3,
        uint param4,
        uint param5
    ) public B(param1) C(param2, param3) D(param4) {
        x = param5;
    }
}

contract X is B, C, D {
    uint x;

    constructor(
        uint param1,
        uint param2,
        uint param3,
        uint param4,
        uint param5
    ) public B(param1) C(param2, param3) D(param4) {
        x = param5;
    }
}

================================================================================
`;

exports[`FunctionDeclaration.sol locations 1`] = `
SourceUnit 0-3056
  SourceUnitMembers 0-3056
    PragmaDirective 0-31
      VersionPragma 7-30
        VersionExpressionSets 15-30
          VersionExpressionSet 15-30
            VersionTerm 16-23
              VersionOperator 16-18
              SimpleVersionLiteral 18-23
            VersionTerm 24-30
              VersionOperator 24-25
              SimpleVersionLiteral 25-30
    ContractDefinition 34-2340
      Identifier 43-62
      ContractSpecifiers 62-62
      ContractMembers 65-2339
        FunctionDefinition 69-156
          Identifier 78-87
          ParametersDeclaration 87-95
            Parameters 88-94
              Parameter 88-94
                UintKeyword 88-92
                Identifier 93-94
          FunctionAttributes 95-107
            PublicKeyword 96-102
            PureKeyword 103-107
          ReturnsDeclaration 108-122
            ParametersDeclaration 116-122
              Parameters 117-121
                Parameter 117-121
                  UintKeyword 117-121
          Block 127-156
            Statements 129-151
              ReturnStatement 137-150
                AdditiveExpression 144-149
                  Identifier 144-145
                  DecimalNumberExpression 148-149
        FunctionDefinition 162-244
          Identifier 171-180
          ParametersDeclaration 180-188
            Parameters 181-187
              Parameter 181-187
                UintKeyword 181-185
                Identifier 186-187
          FunctionAttributes 188-200
            PublicKeyword 189-195
            PureKeyword 196-200
          ReturnsDeclaration 201-215
            ParametersDeclaration 209-215
              Parameters 210-214
                Parameter 210-214
                  UintKeyword 210-214
          Block 215-244
            Statements 217-239
              ReturnStatement 225-238
                AdditiveExpression 232-237
                  Identifier 232-233
                  DecimalNumberExpression 236-237
        FunctionDefinition 250-337
          Identifier 259-268
          ParametersDeclaration 268-276
            Parameters 269-275
              Parameter 269-275
                UintKeyword 269-273
                Identifier 274-275
          FunctionAttributes 276-288
            PublicKeyword 277-283
            PureKeyword 284-288
          ReturnsDeclaration 289-303
            ParametersDeclaration 297-303
              Parameters 298-302
                Parameter 298-302
                  UintKeyword 298-302
          Block 304-337
            Statements 306-328
              ReturnStatement 314-327
                AdditiveExpression 321-326
                  Identifier 321-322
                  DecimalNumberExpression 325-326
        FunctionDefinition 343-421
          Identifier 352-361
          ParametersDeclaration 361-369
            Parameters 362-368
              Parameter 362-368
                UintKeyword 362-366
                Identifier 367-368
          FunctionAttributes 369-381
            PublicKeyword 370-376
            PureKeyword 377-381
          ReturnsDeclaration 382-396
            ParametersDeclaration 390-396
              Parameters 391-395
                Parameter 391-395
                  UintKeyword 391-395
          Block 397-421
            Statements 399-420
              ReturnStatement 407-420
                AdditiveExpression 414-419
                  Identifier 414-415
                  DecimalNumberExpression 418-419
        FunctionDefinition 427-496
          Identifier 436-440
          ParametersDeclaration 440-442
            Parameters 441-441
          FunctionAttributes 442-459
            PublicKeyword 453-459
            ModifierInvocation 443-452
              IdentifierPath 443-452
                Identifier 443-452
          Block 460-496
            Statements 462-491
              ExpressionStatement 470-490
                FunctionCallExpression 470-489
                  Identifier 470-482
                  PositionalArgumentsDeclaration 482-489
                    PositionalArguments 483-488
                      Identifier 483-488
        FunctionDefinition 567-718
          Identifier 576-606
          ParametersDeclaration 606-680
            Parameters 607-679
              Parameter 607-616
                AddressType 607-614
                Identifier 615-616
              Parameter 618-627
                AddressType 618-625
                Identifier 626-627
              Parameter 629-638
                AddressType 629-636
                Identifier 637-638
              Parameter 648-657
                AddressType 648-655
                Identifier 656-657
              Parameter 659-668
                AddressType 659-666
                Identifier 667-668
              Parameter 670-679
                AddressType 670-677
                Identifier 678-679
          FunctionAttributes 680-687
            PublicKeyword 681-687
          Block 688-718
            Statements 690-713
              ExpressionStatement 698-712
                FunctionCallExpression 698-711
                  Identifier 698-709
                  PositionalArgumentsDeclaration 709-711
                    PositionalArguments 710-710
        FunctionDefinition 724-1087
          Identifier 733-763
          ParametersDeclaration 763-1049
            Parameters 764-1048
              Parameter 764-773
                AddressType 764-771
                Identifier 772-773
              Parameter 819-828
                AddressType 819-826
                Identifier 827-828
              Parameter 874-883
                AddressType 874-881
                Identifier 882-883
              Parameter 929-938
                AddressType 929-936
                Identifier 937-938
              Parameter 984-993
                AddressType 984-991
                Identifier 992-993
              Parameter 1039-1048
                AddressType 1039-1046
                Identifier 1047-1048
          FunctionAttributes 1049-1056
            PublicKeyword 1050-1056
          Block 1057-1087
            Statements 1059-1082
              ExpressionStatement 1067-1081
                FunctionCallExpression 1067-1080
                  Identifier 1067-1078
                  PositionalArgumentsDeclaration 1078-1080
                    PositionalArguments 1079-1079
        FunctionDefinition 1093-1285
          Identifier 1102-1132
          ParametersDeclaration 1132-1247
            Parameters 1134-1246
              Parameter 1142-1151
                AddressType 1142-1149
                Identifier 1150-1151
              Parameter 1161-1170
                AddressType 1161-1168
                Identifier 1169-1170
              Parameter 1180-1189
                AddressType 1180-1187
                Identifier 1188-1189
              Parameter 1199-1208
                AddressType 1199-1206
                Identifier 1207-1208
              Parameter 1218-1227
                AddressType 1218-1225
                Identifier 1226-1227
              Parameter 1237-1246
                AddressType 1237-1244
                Identifier 1245-1246
          FunctionAttributes 1247-1254
            PublicKeyword 1248-1254
          Block 1255-1285
            Statements 1257-1280
              ExpressionStatement 1265-1279
                FunctionCallExpression 1265-1278
                  Identifier 1265-1276
                  PositionalArgumentsDeclaration 1276-1278
                    PositionalArguments 1277-1277
        FunctionDefinition 1291-1602
          Identifier 1300-1328
          ParametersDeclaration 1328-1361
            Parameters 1329-1360
              Parameter 1329-1338
                AddressType 1329-1336
                Identifier 1337-1338
              Parameter 1340-1349
                AddressType 1340-1347
                Identifier 1348-1349
              Parameter 1351-1360
                AddressType 1351-1358
                Identifier 1359-1360
          FunctionAttributes 1362-1512
            PublicKeyword 1404-1410
            ModifierInvocation 1453-1462
              IdentifierPath 1453-1462
                Identifier 1453-1462
            ModifierInvocation 1505-1511
              IdentifierPath 1505-1511
                Identifier 1505-1511
          ReturnsDeclaration 1554-1571
            ParametersDeclaration 1562-1571
              Parameters 1563-1570
                Parameter 1563-1570
                  AddressType 1563-1570
          Block 1572-1602
            Statements 1574-1597
              ExpressionStatement 1582-1596
                FunctionCallExpression 1582-1595
                  Identifier 1582-1593
                  PositionalArgumentsDeclaration 1593-1595
                    PositionalArguments 1594-1594
        FunctionDefinition 1608-1763
          Identifier 1617-1645
          ParametersDeclaration 1645-1678
            Parameters 1646-1677
              Parameter 1646-1655
                AddressType 1646-1653
                Identifier 1654-1655
              Parameter 1657-1666
                AddressType 1657-1664
                Identifier 1665-1666
              Parameter 1668-1677
                AddressType 1668-1675
                Identifier 1676-1677
          FunctionAttributes 1679-1710
            PublicKeyword 1687-1693
            ModifierInvocation 1694-1703
              IdentifierPath 1694-1703
                Identifier 1694-1703
            ModifierInvocation 1704-1710
              IdentifierPath 1704-1710
                Identifier 1704-1710
          ReturnsDeclaration 1711-1728
            ParametersDeclaration 1719-1728
              Parameters 1720-1727
                Parameter 1720-1727
                  AddressType 1720-1727
          Block 1733-1763
            Statements 1735-1758
              ExpressionStatement 1743-1757
                FunctionCallExpression 1743-1756
                  Identifier 1743-1754
                  PositionalArgumentsDeclaration 1754-1756
                    PositionalArguments 1755-1755
        FunctionDefinition 1769-1944
          Identifier 1778-1806
          ParametersDeclaration 1806-1839
            Parameters 1807-1838
              Parameter 1807-1816
                AddressType 1807-1814
                Identifier 1815-1816
              Parameter 1818-1827
                AddressType 1818-1825
                Identifier 1826-1827
              Parameter 1829-1838
                AddressType 1829-1836
                Identifier 1837-1838
          FunctionAttributes 1840-1888
            PublicKeyword 1848-1854
            ModifierInvocation 1863-1872
              IdentifierPath 1863-1872
                Identifier 1863-1872
            ModifierInvocation 1881-1887
              IdentifierPath 1881-1887
                Identifier 1881-1887
          ReturnsDeclaration 1896-1913
            ParametersDeclaration 1904-1913
              Parameters 1905-1912
                Parameter 1905-1912
                  AddressType 1905-1912
          Block 1914-1944
            Statements 1916-1939
              ExpressionStatement 1924-1938
                FunctionCallExpression 1924-1937
                  Identifier 1924-1935
                  PositionalArgumentsDeclaration 1935-1937
                    PositionalArguments 1936-1936
        FunctionDefinition 1950-2338
          Identifier 1959-1987
          ParametersDeclaration 1987-2050
            Parameters 1989-2045
              Parameter 1997-2006
                AddressType 1997-2004
                Identifier 2005-2006
              Parameter 2016-2025
                AddressType 2016-2023
                Identifier 2024-2025
              Parameter 2035-2044
                AddressType 2035-2042
                Identifier 2043-2044
          FunctionAttributes 2051-2066
            PublicKeyword 2059-2065
          ReturnsDeclaration 2074-2181
            ParametersDeclaration 2082-2181
              Parameters 2083-2180
                Parameter 2083-2106
                  AddressType 2083-2090
                  Identifier 2091-2106
                Parameter 2125-2145
                  UintKeyword 2125-2132
                  Identifier 2133-2145
                Parameter 2164-2180
                  UintKeyword 2164-2171
                  Identifier 2172-2180
          Block 2186-2338
            Statements 2188-2333
              ExpressionStatement 2196-2210
                FunctionCallExpression 2196-2209
                  Identifier 2196-2207
                  PositionalArgumentsDeclaration 2207-2209
                    PositionalArguments 2208-2208
              ReturnStatement 2220-2332
                TupleExpression 2227-2331
                  TupleValues 2228-2330
                    TupleValue 2228-2250
                      Identifier 2228-2250
                    TupleValue 2268-2290
                      Identifier 2268-2290
                    TupleValue 2308-2330
                      Identifier 2308-2330
    ContractDefinition 2387-2438
      Identifier 2396-2397
      ContractSpecifiers 2397-2397
      ContractMembers 2400-2437
        ConstructorDefinition 2404-2436
          ParametersDeclaration 2415-2421
            Parameters 2416-2420
              Parameter 2416-2420
                UintKeyword 2416-2420
          ConstructorAttributes 2421-2428
            PublicKeyword 2422-2428
          Block 2429-2436
            Statements 2431-2431
    ContractDefinition 2441-2498
      Identifier 2450-2451
      ContractSpecifiers 2451-2451
      ContractMembers 2454-2497
        ConstructorDefinition 2458-2496
          ParametersDeclaration 2469-2481
            Parameters 2470-2480
              Parameter 2470-2474
                UintKeyword 2470-2474
              Parameter 2476-2480
                UintKeyword 2476-2480
          ConstructorAttributes 2481-2488
            PublicKeyword 2482-2488
          Block 2489-2496
            Statements 2491-2491
    ContractDefinition 2501-2552
      Identifier 2510-2511
      ContractSpecifiers 2511-2511
      ContractMembers 2514-2551
        ConstructorDefinition 2518-2550
          ParametersDeclaration 2529-2535
            Parameters 2530-2534
              Parameter 2530-2534
                UintKeyword 2530-2534
          ConstructorAttributes 2535-2542
            PublicKeyword 2536-2542
          Block 2543-2550
            Statements 2545-2545
    ContractDefinition 2616-2828
      Identifier 2625-2626
      ContractSpecifiers 2626-2637
        InheritanceSpecifier 2627-2637
          InheritanceTypes 2629-2637
            InheritanceType 2630-2631
              IdentifierPath 2630-2631
                Identifier 2630-2631
            InheritanceType 2633-2634
              IdentifierPath 2633-2634
                Identifier 2633-2634
            InheritanceType 2636-2637
              IdentifierPath 2636-2637
                Identifier 2636-2637
      ContractMembers 2640-2827
        StateVariableDefinition 2644-2651
          UintKeyword 2644-2648
          StateVariableAttributes 2648-2648
          Identifier 2649-2650
        ConstructorDefinition 2657-2826
          ParametersDeclaration 2668-2733
            Parameters 2669-2732
              Parameter 2669-2680
                UintKeyword 2669-2673
                Identifier 2674-2680
              Parameter 2682-2693
                UintKeyword 2682-2686
                Identifier 2687-2693
              Parameter 2695-2706
                UintKeyword 2695-2699
                Identifier 2700-2706
              Parameter 2708-2719
                UintKeyword 2708-2712
                Identifier 2713-2719
              Parameter 2721-2732
                UintKeyword 2721-2725
                Identifier 2726-2732
          ConstructorAttributes 2734-2795
            PublicKeyword 2788-2794
            ModifierInvocation 2738-2747
              IdentifierPath 2738-2739
                Identifier 2738-2739
              PositionalArgumentsDeclaration 2739-2747
                PositionalArguments 2740-2746
                  Identifier 2740-2746
            ModifierInvocation 2752-2769
              IdentifierPath 2752-2753
                Identifier 2752-2753
              PositionalArgumentsDeclaration 2753-2769
                PositionalArguments 2754-2768
                  Identifier 2754-2760
                  Identifier 2762-2768
            ModifierInvocation 2774-2783
              IdentifierPath 2774-2775
                Identifier 2774-2775
              PositionalArgumentsDeclaration 2775-2783
                PositionalArguments 2776-2782
                  Identifier 2776-2782
          Block 2799-2826
            Statements 2801-2821
              ExpressionStatement 2809-2820
                AssignmentExpression 2809-2819
                  Identifier 2809-2810
                  Identifier 2813-2819
    ContractDefinition 2831-3055
      Identifier 2840-2841
      ContractSpecifiers 2841-2852
        InheritanceSpecifier 2842-2852
          InheritanceTypes 2844-2852
            InheritanceType 2845-2846
              IdentifierPath 2845-2846
                Identifier 2845-2846
            InheritanceType 2848-2849
              IdentifierPath 2848-2849
                Identifier 2848-2849
            InheritanceType 2851-2852
              IdentifierPath 2851-2852
                Identifier 2851-2852
      ContractMembers 2855-3054
        StateVariableDefinition 2859-2866
          UintKeyword 2859-2863
          StateVariableAttributes 2863-2863
          Identifier 2864-2865
        ConstructorDefinition 2872-3053
          ParametersDeclaration 2883-2948
            Parameters 2884-2947
              Parameter 2884-2895
                UintKeyword 2884-2888
                Identifier 2889-2895
              Parameter 2897-2908
                UintKeyword 2897-2901
                Identifier 2902-2908
              Parameter 2910-2921
                UintKeyword 2910-2914
                Identifier 2915-2921
              Parameter 2923-2934
                UintKeyword 2923-2927
                Identifier 2928-2934
              Parameter 2936-2947
                UintKeyword 2936-2940
                Identifier 2941-2947
          ConstructorAttributes 2949-3025
            PublicKeyword 2957-2963
            ModifierInvocation 2972-2981
              IdentifierPath 2972-2973
                Identifier 2972-2973
              PositionalArgumentsDeclaration 2973-2981
                PositionalArguments 2974-2980
                  Identifier 2974-2980
            ModifierInvocation 2990-3007
              IdentifierPath 2990-2991
                Identifier 2990-2991
              PositionalArgumentsDeclaration 2991-3007
                PositionalArguments 2992-3006
                  Identifier 2992-2998
                  Identifier 3000-3006
            ModifierInvocation 3016-3025
              IdentifierPath 3016-3017
                Identifier 3016-3017
              PositionalArgumentsDeclaration 3017-3025
                PositionalArguments 3018-3024
                  Identifier 3018-3024
          Block 3026-3053
            Statements 3028-3048
              ExpressionStatement 3036-3047
                AssignmentExpression 3036-3046
                  Identifier 3036-3037
                  Identifier 3040-3046
`;

exports[`Mappings.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
pragma solidity >=0.4.0 <0.7.0;


contract Mappings {
    mapping (uint => uint) map;
    mapping( address => bool ) registeredAddresses;
    mapping (uint => mapping (bool => Data[])) public data;
    mapping(uint => mapping (uint => s)) data;
    mapping(Data => uint) data;
}

=====================================output=====================================
pragma solidity >=0.4.0 <0.7.0;

contract Mappings {
    mapping(uint => uint) map;
    mapping(address => bool) registeredAddresses;
    mapping(uint => mapping(bool => Data[])) public data;
    mapping(uint => mapping(uint => s)) data;
    mapping(Data => uint) data;
}

================================================================================
`;

exports[`Mappings.sol locations 1`] = `
SourceUnit 0-279
  SourceUnitMembers 0-279
    PragmaDirective 0-31
      VersionPragma 7-30
        VersionExpressionSets 15-30
          VersionExpressionSet 15-30
            VersionTerm 16-23
              VersionOperator 16-18
              SimpleVersionLiteral 18-23
            VersionTerm 24-30
              VersionOperator 24-25
              SimpleVersionLiteral 25-30
    ContractDefinition 34-278
      Identifier 43-51
      ContractSpecifiers 51-51
      ContractMembers 54-277
        StateVariableDefinition 58-85
          MappingType 58-80
            MappingKey 67-71
              UintKeyword 67-71
            MappingValue 75-79
              UintKeyword 75-79
          StateVariableAttributes 80-80
          Identifier 81-84
        StateVariableDefinition 90-137
          MappingType 90-116
            MappingKey 99-106
              AddressType 99-106
            MappingValue 110-114
              BoolKeyword 110-114
          StateVariableAttributes 116-116
          Identifier 117-136
        StateVariableDefinition 142-197
          MappingType 142-184
            MappingKey 151-155
              UintKeyword 151-155
            MappingValue 159-183
              MappingType 159-183
                MappingKey 168-172
                  BoolKeyword 168-172
                MappingValue 176-182
                  ArrayTypeName 176-182
                    IdentifierPath 176-180
                      Identifier 176-180
          StateVariableAttributes 184-191
            PublicKeyword 185-191
          Identifier 192-196
        StateVariableDefinition 202-244
          MappingType 202-238
            MappingKey 210-214
              UintKeyword 210-214
            MappingValue 218-237
              MappingType 218-237
                MappingKey 227-231
                  UintKeyword 227-231
                MappingValue 235-236
                  IdentifierPath 235-236
                    Identifier 235-236
          StateVariableAttributes 238-238
          Identifier 239-243
        StateVariableDefinition 249-276
          MappingType 249-270
            MappingKey 257-261
              IdentifierPath 257-261
                Identifier 257-261
            MappingValue 265-269
              UintKeyword 265-269
          StateVariableAttributes 270-270
          Identifier 271-275
`;

exports[`MaximumLineLength.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
pragma solidity >=0.4.0 <0.6.0;


contract FunctionCalls {
    function() {
        thisFunctionCallIsReallyLong(longArgument1,
                                     longArgument2,
                                     longArgument3
        );

        thisFunctionCallIsReallyLong(longArgument1,
            longArgument2,
            longArgument3
        );

        thisFunctionCallIsReallyLong(
            longArgument1, longArgument2,
            longArgument3
        );

        thisFunctionCallIsReallyLong(
        longArgument1,
        longArgument2,
        longArgument3
        );

        thisFunctionCallIsReallyLong(
            longArgument1,
            longArgument2,
            longArgument3);
    }
}


contract AssignmentStatements {
    function() {
        thisIsALongNestedMapping[being][set][to_some_value] = someFunction(argument1,
                                                                           argument2,
                                                                           argument3,
                                                                           argument4);
    }
}


contract EventDefinitionsAndEventEmitters {
    event LongAndLotsOfArgs(address sender,
                            address recipient,
                            uint256 publicKey,
                            uint256 amount,
                            bytes32[] options,
                            bytes32 longAttribute);

    function() {
        LongAndLotsOfArgs(sender,
                          recipient,
                          publicKey,
                          amount,
                          options,
                          longAttribute);
        emit LongAndLotsOfArgs(sender,
                               recipient,
                               publicKey,
                               amount,
                               options,
                               longAttribute);
    }
}

=====================================output=====================================
pragma solidity >=0.4.0 <0.6.0;

contract FunctionCalls {
    function() {
        thisFunctionCallIsReallyLong(
            longArgument1,
            longArgument2,
            longArgument3
        );

        thisFunctionCallIsReallyLong(
            longArgument1,
            longArgument2,
            longArgument3
        );

        thisFunctionCallIsReallyLong(
            longArgument1,
            longArgument2,
            longArgument3
        );

        thisFunctionCallIsReallyLong(
            longArgument1,
            longArgument2,
            longArgument3
        );

        thisFunctionCallIsReallyLong(
            longArgument1,
            longArgument2,
            longArgument3
        );
    }
}

contract AssignmentStatements {
    function() {
        thisIsALongNestedMapping[being][set][to_some_value] = someFunction(
            argument1,
            argument2,
            argument3,
            argument4
        );
    }
}

contract EventDefinitionsAndEventEmitters {
    event LongAndLotsOfArgs(
        address sender,
        address recipient,
        uint256 publicKey,
        uint256 amount,
        bytes32[] options,
        bytes32 longAttribute
    );

    function() {
        LongAndLotsOfArgs(
            sender,
            recipient,
            publicKey,
            amount,
            options,
            longAttribute
        );
        emit LongAndLotsOfArgs(
            sender,
            recipient,
            publicKey,
            amount,
            options,
            longAttribute
        );
    }
}

================================================================================
`;

exports[`MaximumLineLength.sol locations 1`] = `
SourceUnit 0-1949
  SourceUnitMembers 0-1949
    PragmaDirective 0-31
      VersionPragma 7-30
        VersionExpressionSets 15-30
          VersionExpressionSet 15-30
            VersionTerm 16-23
              VersionOperator 16-18
              SimpleVersionLiteral 18-23
            VersionTerm 24-30
              VersionOperator 24-25
              SimpleVersionLiteral 25-30
    ContractDefinition 34-723
      Identifier 43-56
      ContractSpecifiers 56-56
      ContractMembers 59-722
        UnnamedFunctionDefinition 63-721
          ParametersDeclaration 71-73
            Parameters 72-72
          UnnamedFunctionAttributes 73-73
          Block 74-721
            Statements 76-716
              ExpressionStatement 84-241
                FunctionCallExpression 84-240
                  Identifier 84-112
                  PositionalArgumentsDeclaration 112-240
                    PositionalArguments 113-231
                      Identifier 113-126
                      Identifier 165-178
                      Identifier 217-230
              ExpressionStatement 251-358
                FunctionCallExpression 251-357
                  Identifier 251-279
                  PositionalArgumentsDeclaration 279-357
                    PositionalArguments 280-348
                      Identifier 280-293
                      Identifier 307-320
                      Identifier 334-347
              ExpressionStatement 368-476
                FunctionCallExpression 368-475
                  Identifier 368-396
                  PositionalArgumentsDeclaration 396-475
                    PositionalArguments 398-466
                      Identifier 410-423
                      Identifier 425-438
                      Identifier 452-465
              ExpressionStatement 486-594
                FunctionCallExpression 486-593
                  Identifier 486-514
                  PositionalArgumentsDeclaration 514-593
                    PositionalArguments 516-584
                      Identifier 524-537
                      Identifier 547-560
                      Identifier 570-583
              ExpressionStatement 604-715
                FunctionCallExpression 604-714
                  Identifier 604-632
                  PositionalArgumentsDeclaration 632-714
                    PositionalArguments 634-713
                      Identifier 646-659
                      Identifier 673-686
                      Identifier 700-713
    ContractDefinition 726-1127
      Identifier 735-755
      ContractSpecifiers 755-755
      ContractMembers 758-1126
        UnnamedFunctionDefinition 762-1125
          ParametersDeclaration 770-772
            Parameters 771-771
          UnnamedFunctionAttributes 772-772
          Block 773-1125
            Statements 775-1120
              ExpressionStatement 783-1119
                AssignmentExpression 783-1118
                  IndexAccessExpression 783-834
                    IndexAccessExpression 783-819
                      IndexAccessExpression 783-814
                        Identifier 783-807
                        Identifier 808-813
                      Identifier 815-818
                    Identifier 820-833
                  FunctionCallExpression 837-1118
                    Identifier 837-849
                    PositionalArgumentsDeclaration 849-1118
                      PositionalArguments 850-1117
                        Identifier 850-859
                        Identifier 936-945
                        Identifier 1022-1031
                        Identifier 1108-1117
    ContractDefinition 1130-1948
      Identifier 1139-1171
      ContractSpecifiers 1171-1171
      ContractMembers 1174-1947
        EventDefinition 1178-1454
          Identifier 1184-1201
          EventParametersDeclaration 1201-1453
            EventParameters 1202-1452
              EventParameter 1202-1216
                AddressType 1202-1209
                Identifier 1210-1216
              EventParameter 1246-1263
                AddressType 1246-1253
                Identifier 1254-1263
              EventParameter 1293-1310
                UintKeyword 1293-1300
                Identifier 1301-1310
              EventParameter 1340-1354
                UintKeyword 1340-1347
                Identifier 1348-1354
              EventParameter 1384-1401
                ArrayTypeName 1384-1393
                  BytesKeyword 1384-1391
                Identifier 1394-1401
              EventParameter 1431-1452
                BytesKeyword 1431-1438
                Identifier 1439-1452
        UnnamedFunctionDefinition 1460-1946
          ParametersDeclaration 1468-1470
            Parameters 1469-1469
          UnnamedFunctionAttributes 1470-1470
          Block 1471-1946
            Statements 1473-1941
              ExpressionStatement 1481-1691
                FunctionCallExpression 1481-1690
                  Identifier 1481-1498
                  PositionalArgumentsDeclaration 1498-1690
                    PositionalArguments 1499-1689
                      Identifier 1499-1505
                      Identifier 1533-1542
                      Identifier 1570-1579
                      Identifier 1607-1613
                      Identifier 1641-1648
                      Identifier 1676-1689
              EmitStatement 1700-1940
                IdentifierPath 1705-1722
                  Identifier 1705-1722
                PositionalArgumentsDeclaration 1722-1939
                  PositionalArguments 1723-1938
                    Identifier 1723-1729
                    Identifier 1762-1771
                    Identifier 1804-1813
                    Identifier 1846-1852
                    Identifier 1885-1892
                    Identifier 1925-1938
`;

exports[`OtherRecommendations.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
pragma solidity >=0.4.0 <0.6.0;


contract OtherRecommendations {
    function () {
        str = 'bar';
        /* TODO: escape quotes in Strings when enforcing a new quote
        str = '"Be yourself; everyone else is already taken." -Oscar Wilde';
        */

        x=3;
        x = 100/10;
        x += 3+4;
        x |= y&&z;


        /* TODO: whitespace around and operator can be different than 1 space if
                 it is the same length before and after
        x = 2**3 + 5;
        x = 2*y + 3*z;
        x = (a+b) * (a-b);
        */


        x = 2** 3 + 5;
        x = y+z;
        x +=1;
    }
}

=====================================output=====================================
pragma solidity >=0.4.0 <0.6.0;

contract OtherRecommendations {
    function() {
        str = "bar";
        /* TODO: escape quotes in Strings when enforcing a new quote
        str = '"Be yourself; everyone else is already taken." -Oscar Wilde';
        */

        x = 3;
        x = 100 / 10;
        x += 3 + 4;
        x |= y && z;

        /* TODO: whitespace around and operator can be different than 1 space if
                 it is the same length before and after
        x = 2**3 + 5;
        x = 2*y + 3*z;
        x = (a+b) * (a-b);
        */

        x = 2 ** 3 + 5;
        x = y + z;
        x += 1;
    }
}

================================================================================
`;

exports[`OtherRecommendations.sol locations 1`] = `
SourceUnit 0-620
  SourceUnitMembers 0-620
    PragmaDirective 0-31
      VersionPragma 7-30
        VersionExpressionSets 15-30
          VersionExpressionSet 15-30
            VersionTerm 16-23
              VersionOperator 16-18
              SimpleVersionLiteral 18-23
            VersionTerm 24-30
              VersionOperator 24-25
              SimpleVersionLiteral 25-30
    ContractDefinition 34-619
      Identifier 43-63
      ContractSpecifiers 63-63
      ContractMembers 66-618
        UnnamedFunctionDefinition 70-617
          ParametersDeclaration 79-81
            Parameters 80-80
          UnnamedFunctionAttributes 81-81
          Block 82-617
            Statements 84-612
              ExpressionStatement 92-104
                AssignmentExpression 92-103
                  Identifier 92-95
                  StringLiterals 97-103
                    StringLiteral 98-103
              ExpressionStatement 271-275
                AssignmentExpression 271-274
                  Identifier 271-272
                  DecimalNumberExpression 273-274
              ExpressionStatement 284-295
                AssignmentExpression 284-294
                  Identifier 284-285
                  MultiplicativeExpression 288-294
                    DecimalNumberExpression 288-291
                    DecimalNumberExpression 292-294
              ExpressionStatement 304-313
                AssignmentExpression 304-312
                  Identifier 304-305
                  AdditiveExpression 309-312
                    DecimalNumberExpression 309-310
                    DecimalNumberExpression 311-312
              ExpressionStatement 322-332
                AssignmentExpression 322-331
                  Identifier 322-323
                  AndExpression 327-331
                    Identifier 327-328
                    Identifier 330-331
              ExpressionStatement 565-579
                AssignmentExpression 565-578
                  Identifier 565-566
                  AdditiveExpression 569-578
                    ExponentiationExpression 569-574
                      DecimalNumberExpression 569-570
                      DecimalNumberExpression 573-574
                    DecimalNumberExpression 577-578
              ExpressionStatement 588-596
                AssignmentExpression 588-595
                  Identifier 588-589
                  AdditiveExpression 592-595
                    Identifier 592-593
                    Identifier 594-595
              ExpressionStatement 605-611
                AssignmentExpression 605-610
                  Identifier 605-606
                  DecimalNumberExpression 609-610
`;

exports[`VariableDeclarations.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
pragma solidity >=0.4.0 <0.7.0;


contract VariableDeclarations {
    uint [] x;
}

=====================================output=====================================
pragma solidity >=0.4.0 <0.7.0;

contract VariableDeclarations {
    uint[] x;
}

================================================================================
`;

exports[`VariableDeclarations.sol locations 1`] = `
SourceUnit 0-83
  SourceUnitMembers 0-83
    PragmaDirective 0-31
      VersionPragma 7-30
        VersionExpressionSets 15-30
          VersionExpressionSet 15-30
            VersionTerm 16-23
              VersionOperator 16-18
              SimpleVersionLiteral 18-23
            VersionTerm 24-30
              VersionOperator 24-25
              SimpleVersionLiteral 25-30
    ContractDefinition 34-82
      Identifier 43-63
      ContractSpecifiers 63-63
      ContractMembers 66-81
        StateVariableDefinition 70-80
          ArrayTypeName 70-77
            UintKeyword 70-74
          StateVariableAttributes 77-77
          Identifier 78-79
`;

exports[`WhitespaceInExpressions.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
pragma solidity >=0.4.0 <0.6.0;


contract WhitespaceInExpressions {
    function () {
        spam( ham[ 1 ], Coin( { name: "ham" } ) );
        x             = 1;
        y             = 2;
        long_variable = 3;
    }

    function spam(uint i , Coin coin) public ;
}

=====================================output=====================================
pragma solidity >=0.4.0 <0.6.0;

contract WhitespaceInExpressions {
    function() {
        spam(ham[1], Coin({name: "ham"}));
        x = 1;
        y = 2;
        long_variable = 3;
    }

    function spam(uint i, Coin coin) public;
}

================================================================================
`;

exports[`WhitespaceInExpressions.sol locations 1`] = `
SourceUnit 0-275
  SourceUnitMembers 0-275
    PragmaDirective 0-31
      VersionPragma 7-30
        VersionExpressionSets 15-30
          VersionExpressionSet 15-30
            VersionTerm 16-23
              VersionOperator 16-18
              SimpleVersionLiteral 18-23
            VersionTerm 24-30
              VersionOperator 24-25
              SimpleVersionLiteral 25-30
    ContractDefinition 34-274
      Identifier 43-66
      ContractSpecifiers 66-66
      ContractMembers 69-273
        UnnamedFunctionDefinition 73-224
          ParametersDeclaration 82-84
            Parameters 83-83
          UnnamedFunctionAttributes 84-84
          Block 85-224
            Statements 87-219
              ExpressionStatement 95-137
                FunctionCallExpression 95-136
                  Identifier 95-99
                  PositionalArgumentsDeclaration 99-136
                    PositionalArguments 100-134
                      IndexAccessExpression 101-109
                        Identifier 101-104
                        DecimalNumberExpression 106-107
                      FunctionCallExpression 111-134
                        Identifier 111-115
                        NamedArgumentsDeclaration 115-134
                          NamedArgumentGroup 117-132
                            NamedArguments 118-130
                              NamedArgument 119-130
                                Identifier 119-123
                                StringLiterals 124-130
                                  StringLiteral 125-130
              ExpressionStatement 146-164
                AssignmentExpression 146-163
                  Identifier 146-147
                  DecimalNumberExpression 162-163
              ExpressionStatement 173-191
                AssignmentExpression 173-190
                  Identifier 173-174
                  DecimalNumberExpression 189-190
              ExpressionStatement 200-218
                AssignmentExpression 200-217
                  Identifier 200-213
                  DecimalNumberExpression 216-217
        FunctionDefinition 230-272
          Identifier 239-243
          ParametersDeclaration 243-263
            Parameters 244-262
              Parameter 244-250
                UintKeyword 244-248
                Identifier 249-250
              Parameter 253-262
                IdentifierPath 253-257
                  Identifier 253-257
                Identifier 258-262
          FunctionAttributes 263-270
            PublicKeyword 264-270
          Semicolon 271-272
`;
